# ai_install

./: .gitignore  AGENTS.md  LICENSE  README.md  deploy-nu.bat  deploy-nu.sh  deploy.bat  deploy.nu  deploy.ps1  deploy.sh  uninstall.bat  uninstall.ps1  uninstall.sh
doc/: OPTIMIZATION_PROGRESS.md  OPTIMIZATION_REPORT.md  gui-installer-build.md  schema.md
doc/plan/: add-nushell-package-20260324-1430.md  optimize-gui-installer-20260312.md
doc/reviews/: optimize-gui-installer-20260312-review.md
gui-installer/: .gitignore  build-macos.sh  build-windows-gnu.ps1  checksums.json  dev-gnu-detach.ps1  dev-gnu.ps1  index.html  package-lock.json  package-windows-complete.cmd  package.json
gui-installer/scripts/: regen_icons.py
gui-installer/src/: App.tsx  test-setup.ts  types.ts
gui-installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui-installer/src-tauri/icons/: icon.icns
gui-installer/src-tauri/src/: backend.rs  channel_config.rs  commands.rs  config.rs  fs_util.rs  lib.rs  secure_store.rs  terminal.rs  types.rs  version.rs
gui-installer/src-tauri/src/installer/: detect.rs  macos.rs  mod.rs  npm.rs  windows.rs
gui-installer/src/components/: AppVersionBanner.test.tsx  AppVersionBanner.tsx  AuthPanel.tsx  BlockingProcessesModal.tsx  ConfigPanel.test.tsx  ConfigPanel.tsx  Dashboard.tsx  DetectSkeleton.tsx  KeySelection.tsx  Layout.tsx  PreflightDialog.tsx  SettingsDrawer.tsx  Summary.test.tsx  Summary.tsx  Toast.tsx  ToolCard.test.tsx  ToolCard.tsx  ToolList.test.tsx  (+1 more)
nu/: config.nu  install_mac.nu  install_win.nu  tools.nu  ui.nu  upgrade.nu
(+11 files in other folders)
