[package]
name = "gui-installer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gui_installer_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
glob = "0.3"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["time", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
